# scitex-core

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: cla.yml  docs.yml  publish-pypi.yml  test.yml
docs/sphinx/: conf.py  quickstart.rst  requirements.txt
docs/sphinx/_build/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/sphinx/_build/html/.doctrees/: index.doctree  installation.doctree  quickstart.doctree
docs/sphinx/_build/html/.doctrees/api/: dict.doctree  dt.doctree  errors.doctree  logging.doctree  parallel.doctree  path.doctree  repro.doctree  sh.doctree  str.doctree  types.doctree
docs/sphinx/_build/html/_modules/: index.html
docs/sphinx/_build/html/_modules/scitex_core/: errors.html  sh.html
docs/sphinx/_build/html/_sources/: index.rst.txt  installation.rst.txt
docs/sphinx/_build/html/_sources/api/: repro.rst.txt  sh.rst.txt  str.rst.txt
docs/sphinx/_build/html/api/: dict.html  dt.html  errors.html  logging.html  parallel.html  path.html  repro.html  sh.html  str.html  types.html
docs/sphinx/api/: dict.rst  dt.rst  errors.rst  logging.rst  parallel.rst
examples/: quickstart.py
src/scitex_core/: __init__.py
src/scitex_core/_skills/: SKILL.md
src/scitex_core/_skills/scitex-core/: 01_installation.md  01_quick-start.md  02_python-api-std.md  02_quick-start.md  03_python-api-data.md  03_python-api.md  10_quick-start.md  11_python-api-std.md  12_python-api-data.md  20_conventions.md  21_env-vars.md  SKILL.md
src/scitex_core/_sphinx_html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
src/scitex_core/_sphinx_html/.doctrees/: index.doctree  installation.doctree  quickstart.doctree
src/scitex_core/_sphinx_html/.doctrees/api/: dict.doctree  dt.doctree  errors.doctree  logging.doctree  parallel.doctree  path.doctree  repro.doctree  sh.doctree  str.doctree  types.doctree
src/scitex_core/_sphinx_html/_modules/: index.html  logging.html
src/scitex_core/_sphinx_html/_modules/scitex_core/: errors.html  sh.html
src/scitex_core/_sphinx_html/_modules/scitex_core/dict/: _DotDict.html  _flatten.html  _listed_dict.html  _pop_keys.html  _replace.html  _safe_merge.html  _to_str.html
src/scitex_core/_sphinx_html/_modules/scitex_core/dt/: _linspace.html
src/scitex_core/_sphinx_html/_modules/scitex_core/logging/: _Tee.html  _config.html  _context.html
src/scitex_core/_sphinx_html/_modules/scitex_core/parallel/: _run.html
src/scitex_core/_sphinx_html/_modules/scitex_core/path/: _clean.html  _find.html  _symlink.html  _this_path.html
src/scitex_core/_sphinx_html/_modules/scitex_core/repro/: _RandomStateManager.html  _gen_id.html  _gen_timestamp.html  _hash_array.html
src/scitex_core/_sphinx_html/_modules/scitex_core/sh/: _security.html
src/scitex_core/_sphinx_html/_modules/scitex_core/str/: _clean_path.html  _color_text.html  _decapitalize.html  _factor_out_digits.html  _format_plot_text.html  _grep.html  _latex.html  _latex_fallback.html  _mask_api_key.html  _parse.html  _print_debug.html  _printc.html  _readable_bytes.html  _remove_ansi.html  _replace.html  _search.html  _squeeze_space.html
src/scitex_core/_sphinx_html/_modules/scitex_core/types/: _ArrayLike.html  _is_listed_X.html
src/scitex_core/_sphinx_html/_sources/api/: path.rst.txt  types.rst.txt
src/scitex_core/_sphinx_html/api/: dict.html  dt.html  errors.html  logging.html  parallel.html  path.html  repro.html  sh.html  str.html  types.html
src/scitex_core/dict/: __init__.py  _safe_merge.py
src/scitex_core/logging/: _Tee.py  __init__.py  _context.py  _levels.py
src/scitex_core/logging/.old/: _tee.py
src/scitex_core/path/: __init__.py  _clean.py  _find.py  _symlink.py  _this_path.py
src/scitex_core/repro/: _RandomStateManager.py  __init__.py  _gen_id.py  _gen_timestamp.py  _hash_array.py
src/scitex_core/sh/: _execute.py  test_sh.py  test_sh_simple.py
src/scitex_core/sh/.old/: MIGRATION_GUIDE.md  TODO.md
src/scitex_core/str/: _DotDict.py  _latex_fallback.py  _parse.py  _replace.py
src/scitex_core/types/: _ArrayLike.py  _ColorLike.py  __init__.py  _is_listed_X.py
tests/: .coveragerc  COVERAGE.md  QUICK_START.md  README.md  TEST_IMPLEMENTATION_STATUS.md  __init__.py  conftest.py  generate_coverage_badge.py  run_tests.sh  simple_runner.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_cross_package_imports.py  test_examples.py
tests/scitex_core/: __init__.py  test_errors.py
tests/scitex_core/dict/: test__DotDict.py
tests/scitex_core/dt/: test__linspace.py
tests/scitex_core/logging/: __init__.py  test__config.py  test__levels.py  test_logger.py  test_tee.py
tests/scitex_core/parallel/: test__run.py
tests/scitex_core/path/: __init__.py  test__clean.py  test__symlink.py  test__this_path.py  test_find.py  test_this_path.py
tests/scitex_core/repro/: __init__.py  test_RandomStateManager.py  test__gen_id.py  test__gen_timestamp.py  test__hash_array.py
tests/scitex_core/sh/: __init__.py  test__init__.py  test__security.py  test__types.py
tests/scitex_core/str/: __init__.py  test__color_text.py  test_color_text.py
tests/scitex_core/types/: __init__.py  test_ArrayLike.py  test__ArrayLike.py  test__ColorLike.py  test_is_listed_X.py
(+40 files in other folders)
