[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-core"
version = "0.2.0"
description = "Core infrastructure and fundamental utilities for the SciTeX ecosystem"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" }
]
keywords = [
    "scientific-computing",
    "logging",
    "infrastructure",
    "utilities"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "colorama>=0.4.0",  # For colored terminal output
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-core"
Repository = "https://github.com/ywatanabe1989/scitex-core"
"Bug Tracker" = "https://github.com/ywatanabe1989/scitex-core/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black>=22.0",
    "mypy>=0.950",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_core"]
