[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-core"
version = "0.2.4"
description = "Core infrastructure and fundamental utilities for the SciTeX ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" }
]
keywords = [
    "scientific-computing",
    "logging",
    "infrastructure",
    "utilities"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "tqdm",
    "matplotlib",
    "colorama>=0.4.0",
    "numpy>=1.20.0",
    "natsort>=8.0.0",
    "scitex-config>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-core"
Repository = "https://github.com/ywatanabe1989/scitex-core"
Issues = "https://github.com/ywatanabe1989/scitex-core/issues"
"Bug Tracker" = "https://github.com/ywatanabe1989/scitex-core/issues"

[project.entry-points."scitex_dev.docs"]
scitex-core = "scitex_core"

[project.entry-points."scitex_dev.skills"]
scitex-core = "scitex_core"

[project.optional-dependencies]
dev = [
    "scitex-dev",
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-core[dev,docs]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]
